# arxaudio

./: .gitignore  CODEBASE_REFERENCE.md  NOTEBOOKLM_PLAN.md  PLAN.md  README.md  compare_rankers.py  config.py  fetch_samples.py  math_replacements.md  preferences.md  preferences.txt  pyproject.toml
.github/workflows/: daily.yml
output/: arxaudio_2026-06-17.txt  arxaudio_rank_2026-06-17.txt  arxaudio_rank_2026-06-23.txt
src/arxaudio/: __init__.py  audio.py  benty.py  emailer.py  fetch.py  filter.py  models.py  pipeline.py  process.py  rank.py  settings.py
tests/: conftest.py  test_audio.py  test_benty.py  test_edge_backend.py  test_emailer.py  test_fetch.py  test_filter.py  test_models.py  test_notebooklm_backend.py  test_notebooklm_settings.py  test_ollama_backend.py  test_process.py  test_rank.py  test_settings.py
tests/benty_fixtures/: daily_arxiv_landing.html  day_results.html  login.html
tests/shrihan_tests/: 2606.12513.txt  2606.12519.txt  2606.12519_out.txt  2606.12521.txt  2606.12521_out.txt  2606.12522.txt  2606.12522_out.txt  2606.12535.txt  2606.12535_out.txt  2606.12549.txt  2606.12549_out.txt  2606.12551.txt  2606.12565.txt  2606.12565_out.txt  2606.12613.txt  2606.12613_out.txt  2606.12669.txt  2606.12669_out.txt  2606.12775.txt  2606.12775_out.txt  2606.12792.txt  2606.12792_out.txt  2606.12822.txt  2606.12822_out.txt  2606.12874.txt  2606.12874_out.txt  2606.12938.txt  2606.12938_out.txt  2606.12980.txt  2606.12980_out.txt  2606.13356.txt  2606.13356_out.txt  2606.13393.txt  2606.13393_out.txt  2606.13527.txt  2606.13538.txt  2606.13538_out.txt  (+6 more)
(+7 files in other folders)
