[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arxaudio"
version = "0.1.0"
description = "Daily arXiv abstracts → filtered MP3 digest, emailed automatically."
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6",
    "edge-tts>=6.1",
    "requests>=2.28",
    "beautifulsoup4>=4.11",
]

[project.optional-dependencies]
notebooklm = [
    "notebooklm-py>=0.8",
]
dev = [
    "pytest>=8",
]

[project.scripts]
arxaudio-process = "arxaudio.process:_cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
